hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr3.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(bool $b): dynamic {
  if ($b) {
    return 42;
  } else {
    return;
  }
}
